# weld

./: Cargo.toml  LICENSE.md  README.md
crates/errors/: Cargo.toml
crates/errors/src/: error_codes.rs  lib.rs
crates/errors/src/error_codes/: E000.md  E001.md  E002.md  E003.md
crates/file/: Cargo.toml  build.rs
crates/file/src/: fs.rs  lib.rs  mmap.rs
crates/linker/: Cargo.toml
crates/linker/src/: configuration.rs  lib.rs  linker.rs
crates/linker/src/elf64/: mod.rs
crates/object/: Cargo.toml
crates/object-macros/: Cargo.toml
crates/object-macros/src/: lib.rs
crates/object/src/: combinators.rs  endianness.rs  lib.rs  read_write.rs  slice.rs  test.rs  write.rs
crates/object/src/elf64/: data.rs  file.rs  mod.rs  program.rs  section.rs  symbol.rs
crates/object/tests/fixtures/: exit.s
crates/parser/: Cargo.toml
crates/parser-macros/: Cargo.toml
crates/parser-macros/src/: lib.rs
crates/parser/src/: combinators.rs  endianness.rs  generators.rs  lib.rs
crates/parser/src/elf64/: data.rs  file.rs  mod.rs  program.rs  section.rs  symbol.rs
crates/parser/tests/fixtures/: Makefile  exit_elf_amd64
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
extra/: documentation.md
