[workspace]
members = [
  "crates/bin/",
  "crates/errors/",
  "crates/file/",
  "crates/linker/",
  "crates/object/",
  "crates/object-macros/",
  "crates/scheduler/",
]

[workspace.dependencies]
async-channel = "1.8.0"
async-executor = "1.5.0"
async-io = "1.12.0"
futures-lite = "1.12.0"
miette = "5.5.0"
thiserror = "1.0"
