[workspace]
resolver = "2"
members = [
  "crates/bin/",
  "crates/errors/",
  "crates/file/",
  "crates/linker/",
  "crates/object/",
  "crates/object-macros/",
  "crates/scheduler/",
]

[workspace.dependencies]
async-channel = "2.2.0"
async-executor = "1.8.0"
async-io = "2.3.0"
futures-lite = "2.2.0"
miette = "7.1.0"
thiserror = "1.0"
