[package]
name = "weld-linker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = { workspace = true }
futures-lite = { workspace = true }
miette = { workspace = true }
target-lexicon = "0.12.6"
thiserror = { workspace = true }
weld-errors = { path = "../errors", version = "0.1" }
weld-file = { path = "../file", version = "0.1" }
weld-object = { path = "../object", version = "0.1", default-features = false }
weld-scheduler = { path = "../scheduler", version = "0.1" }

[features]
default = ["elf64"]

# Enable the `elf64` format.
elf64 = ["weld-object/elf64"]
