[package]
name = "weld-object"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = { version = "1.1.0", default-features = false, features = ["alloc", "std"] }
enumflags2 = "0.7.5"
nom = "7.1.3"
weld-object-macros = { path = "../object-macros", version = "0.1" }

[features]
default = ["elf64"]

# Enable the `elf64` format.
elf64 = []