[package]
name = "weld-object"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = { version = "1.1.0", default-features = false, features = ["alloc", "std"] }
enumflags2 = "0.7.5"
iced-x86 = { version = "1.18.0", default-features = false, features = ["std", "decoder", "fast_fmt"], optional = true }
nom = "7.1.3"
weld-object-macros = { path = "../object-macros", version = "0.1" }

[features]
default = ["elf64"]

# Improve the debugging experience.
debug = []

# Assume `debug` will have to deal with `x86` data.
debug-x86 = ["debug", "dep:iced-x86"]

# Enable the `elf64` format.
elf64 = []
