[package]
name = "weld-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = { workspace = true }
async-task = "4.7.0" # bug fix while waiting on https://github.com/smol-rs/async-executor/pull/98
async-executor = { workspace = true }
futures-lite = { workspace = true }

[dev-dependencies]
async-io = { workspace = true }
fastrand = "2.0.1"
